# nostr-playground

./: .gitignore  .goosehints  .pre-commit-config.yaml  NOSTR_SDK_API.md  README.md  convert_nsec.py  debug_connection.py  extract_relays_from_notes.py  find_note_relays.py  generate_nsec.py  get_latest_posts.py  hello.py  keys.txt.sample  pyproject.toml  relays_extracted.txt  republish_note_to_relay.py
dev_scripts/: introspect_sdk.py
scripts/: convert_nsec.py  debug_connection.py  decode_nevent.py  extract_relays_from_notes.py  find_note_relays.py  generate_nsec.py  get_latest_posts.py  hex_to_npub.py  like_post.py  query_relay.py  republish_note_to_relay.py  send_zap.py  utils.py
tests/: test_convert_nsec.py  test_send_zap.py
